feature/ccls-1974_proceedings_and_costs (#23)
* feature/ccls-1974_proceedings_and_costs

* CCLS-1976
* CCLS-1977
* CCLS-1978
* CCLS-1979
* CCLS-1980
* CCLS-1981
* CCLS-1982
* CCLS-1983
* CCLS-1984
* CCLS-1985
* CCLS-1986
* CCLS-1987
* CCLS-1988
* CCLS-1989

* PR Amendments
